fix(rag): 优化知识库向量与关键词检索、SSE协议适配及多轮对话防复读问题